refactor: Migrate Vaadin theme configuration to properties, update compiler to Java 21, and apply minor code style adjustments.